compiler/testData/checkerWithErrorTypes/quick/UnitByDefaultForFunctionTypes.jet
fun foo(f : fun()) {
    val <!UNUSED_VARIABLE!>x<!> : Unit = f()
}